Updated README file to add note about updating layman.cfg

--- a/README
+++ b/README
@@ -2,5 +2,6 @@ This is a gentoo overlay for random ebuilds I have written or downloaded that I 
 
 You can add this overlay using layman with the following command:
 
-layman -f -o http://github.com/doobry/gentoo-overlay/raw/master/layman.xml -a doobry
+	layman -f -o http://github.com/doobry/gentoo-overlay/raw/master/layman.xml -a doobry
 
+You should also add the url to the list of remote overlays in /etc/layman/layman.cfg
