--- a/README
+++ b/README
@@ -1,7 +1,12 @@
+Doobry's Gentoo Overlay
+=======================
 This is a gentoo overlay for random ebuilds I have written or downloaded that I use.
+ 
+Installation
+------------
+You can add this overlay using layman with:
 
-You can add this overlay using layman with the following command:
-
-	layman -f -o http://github.com/doobry/gentoo-overlay/raw/master/layman.xml -a doobry
-
+    layman -f -o http://github.com/doobry/gentoo-overlay/raw/master/layman.xml -a doobry
+ 
 You should also add the url to the list of remote overlays in /etc/layman/layman.cfg
+
